# material3-optimizer

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: cli.rs  lib.rs  main.rs  optimize.rs
