[package]
name = "material3_optimzer_cli"
description = "Command line interface for https://crates.io/crates/material3_optimzer"
edition.workspace = true
readme.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.11" , features = ["derive"]}
material3_optimzer = { path = "../" , version = "0.1.1"}
